# file-explorer-ts

./: index.html  package-lock.json  package.json  plan.txt
src/: App.tsx  main.tsx  store.ts  styles.scss
src-tauri/: Cargo.toml  my-database.db  tauri.conf.json
src-tauri/src/: db.rs  directory.rs  drives.rs  file.rs  logger.rs  main.rs
src-tauri/src/network_file_transfer/: client.rs  connection_data.rs  file_transfer.rs  mod.rs  packet_type.rs  receiver.rs  sender.rs
src/components/Center/: Center.tsx
src/components/Center/DirectoryWindow/: DirectoryWindow.tsx  TabData.ts  TabObject.ts  useDirectoryWIndow.tsx
src/components/Center/DirectoryWindow/CurrentPathDisplay/: CurrentPathDisplay.tsx
src/components/Center/DirectoryWindow/Entries/: Directory.tsx  File.tsx
src/components/Center/DirectoryWindow/EntriesDisplay/: EntriesDisplay.tsx  ViewMode.ts  useEntriesDisplay.tsx
src/components/Center/DirectoryWindow/NewEntries/: NewFileTemplate.tsx  NewFolderTemplate.tsx
src/components/Center/DirectoryWindow/SearchBox/: SearchBox.tsx
src/components/Center/DirectoryWindow/Tab/: Tab.tsx  useTab.tsx
src/components/Center/Explorer/: Explorer.tsx  ExplorerSeperator.tsx
src/components/Center/Explorer/ExplorerEntry/: ExplorerEntry.tsx
src/components/ConfirmationManager/: ConfirmationManager.tsx  useConfirmationManager.tsx
src/components/ConfirmationManager/ConfirmationrWindow/: ConfirmationWindow.tsx
src/components/ErrorManager/: ErrorManager.tsx  useErrorManager.tsx
src/components/ErrorManager/ErrorWindow/: ErrorWindow.tsx
src/components/Footer/: Footer.tsx
src/components/Header/: Header.tsx
src/components/Header/TabDirectoryNavigator/: TabDirectoryNavigator.tsx
src/components/Header/TopMenu/: TopMenu.tsx  TopMenuButton.tsx
src/intefaces/: Entry.ts  SelectedEntry.ts  TabObject.ts
src/intefaces/EventPayloads/: CloseContextMenuEventPayload.ts
src/managers/: favouritesManager.ts
src/slices/: entriesSlice.ts  tabsSlice.ts
(+28 files in other folders)
