[package]
name = "file-explorer-ts"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["system-tray" ,"shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.0.1"
winapi = { version = "0.3.9", features = ["shellapi"] }
walkdir = "2.3.3"
lazy_static = "1.4.0"
fslock = "0.2.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
